[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cawa"
dynamic = ["version"]
authors = [
  { name="Alexandre Harano", email="email@ayharano.dev" },
]
description = "Customer and Warehouse API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn[standard] >=0.24.0,<1",
    "fastapi[all] >=0.104.1,<1",
    "pydantic-settings >=2.1.0,<2.2",
    "sqlalchemy >=2.0.23,<2.1",
    "sqlalchemy-utils >=0.41.1,<0.42",
    "psycopg[binary,pool] >=3.1.13,<3.2",
]

[project.urls]
"Homepage" = "https://github.com/ayharano/cawa"
"Bug Tracker" = "https://github.com/ayharano/cawa/issues"

[project.optional-dependencies]
test = [
    "pytest >=7.4.3,<7.5",
    "pytest-cov >=4.1.0,<4.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.setuptools.dynamic]
version = {file = "cawa/VERSION"}
